<resources>
    <string name="app_name">마이씨푸드ERP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="simple_alert_title">알림</string>

    <string name="err_conn">통신 장애가 발생하였습니다</string>
    <string name="err_json">올바르지 않은 데이터 형식입니다</string>
    <string name="err_unknown">알 수 없는 오류</string>

    <string name="msg_pressed_backBtn">\'뒤로\'버튼을 다시 누르시면 앱이 종료됩니다</string>



    <!-- 로그인 팝업 -->
    <string-array name="login_menu">
        <item> Login </item>
        <item>  특징  </item>
        <item> 가격정책 </item>
        <item> 회원가입 </item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <string name="login_ed_id_hint">ID</string>
    <string name="login_ed_pw_hint">Password</string>

    <string name="login_chk_id">ID가 입력되지 않았습니다.</string>
    <string name="login_chk_pw">비밀번호가 입력되지 않았습니다.</string>
    <string name="login_err">로그인이 실패하였습니다.</string>

    <string name="login_join_terms1_txt">myseafood erp 이용약관</string>
    <string name="login_join_terms2_txt">개인정보 수집</string>
    <string name="login_join_terms_chk">위 사항에 대해 동의합니다</string>

    <string name="login_join_title">회원가입</string>
    <string name="login_join_ed_name_hint">사용자이름</string>
    <string name="login_join_ed_id_hint">아이디</string>
    <string name="login_join_ed_pass_hint">비밀번호</string>
    <string name="login_join_ed_repass_hint">비밀번호 확인</string>
    <string name="login_join_ed_email_hint">이메일 주소</string>
    <string name="login_join_ed_phone_hint">전화번호</string>
    <string name="login_join_ed_company_hint">상호</string>

    <string name="login_join_add_sub">부가 서비스 신청</string>
    <string name="login_join_add_sub_chk">웹 팩스 번호 생성</string>
    <string name="login_join_add_sub_1_1">부가서비스</string>
    <string name="login_join_add_sub_1_2">웹팩스</string>
    <string name="login_join_add_sub_2_1">기능</string>
    <string name="login_join_add_sub_2_2">웹 팩스 번호를 만들어 출력 전에 내용 확인 가능하며, 비용 절감</string>
    <string name="login_join_add_sub_3_1">가격</string>
    <string name="login_join_add_sub_3_2">번호 사용료 : 월 10,000원(VAT포함)</string>
    <string name="login_join_add_sub_msg1">* 신청 후 승인을 받아야 사용할 수 있습니다.</string>
    <string name="login_join_add_sub_msg2">* 문의 : 010 - 7560 - 9453</string>

    <string name="login_join_chk_terms1">myseafood erp 이용약관을 읽지 않으셨습니다</string>
    <string name="login_join_chk_terms2">개인정보 수집을 읽지 않으셨습니다</string>
    <string name="login_join_agr_terms1">myseafood erp 이용약관에 동의해주세요</string>
    <string name="login_join_agr_terms2">개인정보 수집에 동의해주세요</string>
    <string name="login_join_chk_name">사용자이름을 입력해주세요</string>
    <string name="login_join_chk_id">아이디를 입력해주세요</string>
    <string name="login_join_chk_pass">비밀번호를 입력해주세요</string>
    <string name="login_join_chk_repass">비밀번호를 확인해주세요</string>
    <string name="login_join_chk_repass2">입력하신 비밀번호가 같지 않습니다</string>
    <string name="login_join_chk_email">이메일 주소를 입력해 주세요</string>
    <string name="login_join_chk_phone">전화번호를 입력해주세요</string>
    <string name="login_join_chk_company">귀하의 상호를 입력해주세요</string>

    <string name="login_remember_acc">아이디 저장</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_find_acc">아이디/비밀번호 찾기</string>

    <string name="login_char_msg"><![CDATA[마이씨푸드 ERP는 수산물 전문 유통 관리 솔루션으로<br>언제 어디서나 기업의 모든 업무 처리와<br>기업상황을 파악할 수 있는 경영관리 & 경영정보 서비스입니다.<br><br><b>• 재고, 영업, 회계, 수입관리까지 기업에 필요한 모든 기능 제공<br>• 월 4만원의 저렴한 비용<br>• 사용자(ID)수 무제한<br>• 다중 사업장 지원 및 데이터 연계로 편리한 운영 가능<br>• 회원사끼리 데이터를 연동하여 매입 및 토스의 편리함<br>• 웹 팩스 이용하여 언제 어디서든 출고증 및 명세표 전송 가능<br>• 무료 클라우드 서비스로 문서와 사진 업로드 및 다운로드 가능<br>• 자동 분개 기능으로 누구나 쉽게 회계 관리 가능<br>• 반복된 판매에 최적화 된 기능 : 자동 업로딩 & 매입 알림<br>• 가입 즉시 사용가능<br>• 100% 웹 기반으로 언제 어디서든 이용 가능<br>• 유지 보수 및 업그레이드에 대한 추가 비용 없음<br>• 모바일 웹 무료 제공<br>• 모든 자료 엑셀로 출력 및 보관 가능<br>• 전자계산서 홈텍스 엑셀 양식 지원</b>]]></string>
    <string name="login_price_msg"><![CDATA[<b>• ERP 서비스</b><br> 사용료 : 월 40,000 원 (VAT미포함)<br> 가입비 : 가입시 1회 300,000 원 (VAT미포함)<br><br><b>• 웹 팩스</b><br> 팩스 발신료 : 건당 70 원 (VAT포함)<br> 팩스 번호 생성(선택) : 월 10,000 원 (VAT포함) - 수신료 무제한 무료<br><font color="#ff3636"><small>* 웹 팩스로 수신 받으려면 팩스 번호를 생성해야 합니다.</small></font>]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--메인화면-->
    <string name="txt_home">홈</string>
    <string name="txt_sale_after_purchase">매입후판매</string>
    <string name="txt_sale_list">판매조회·수정</string>
    <string name="txt_stock_list">재고조회</string>
    <string name="txt_sale_stock">재고판매</string>
    <string name="txt_factory_cert">출고증</string>
    <string name="txt_factory_cert2">출고증재발급</string>
    <string name="txt_cust_list">거래처조회</string>
    <string name="txt_file_manager">공유자료</string>
    <string name="txt_alert">알림</string>
    <string name="txt_mobilefax">모바일팩스</string>
    <string name="txt_sentlist">발신내역</string>

    <string name="err_login_result">로그인에 실패하여 앱을 종료합니다.</string>

    <!--메인화면 bottom-->
    <string name="txt_main_bottom_1">카리스　사업자등록번호: 863-51-00081</string>
    <string name="txt_main_bottom_2">주소: 부산시 사하구 감천항로 12</string>
    <string name="txt_main_bottom_3">대표전화: 010-3560-9453　FAX번호: 051-204-5696 이메일: char1s@hanmail.net</string>
    <string name="txt_main_bottom_4">이메일: char1s@hanmail.net</string>
    <string name="txt_main_bottom_5">COPYRIGHT (C) 2015-2016 카리스 ALL RIGHTS RESERVED.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
