<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            >
            <EditText
                android:id="@+id/ed_login"
                android:layout_width="@dimen/login_ed_width"
                android:layout_height="@dimen/login_ed_height"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_round_l"
                android:inputType="text"
                android:hint="@string/login_ed_id_hint"
                android:textColorHint="@color/color_input_panel_hint"
                android:textSize="@dimen/text_font_4"
                android:duplicateParentState="false"
                />
            <ImageView
                android:layout_width="@dimen/login_ico_size"
                android:layout_height="@dimen/login_ico_size"
                android:layout_toRightOf="@id/ed_login"
                android:background="@drawable/bg_round_r"
                android:layout_marginLeft="1dp"
                android:src="@drawable/ico_login"
                android:scaleType="fitCenter"
                android:padding="15dp"
                android:duplicateParentState="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_between_component"
            android:clickable="true"
            >
            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="@dimen/login_ed_width"
                android:layout_height="@dimen/login_ed_height"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_round_l"
                android:inputType="textPassword"
                android:hint="@string/login_ed_pw_hint"
                android:textColorHint="@color/color_input_panel_hint"
                android:textSize="@dimen/text_font_4"
                android:duplicateParentState="false"
                />
            <ImageView
                android:layout_width="@dimen/login_ico_size"
                android:layout_height="@dimen/login_ico_size"
                android:layout_toRightOf="@id/ed_pass"
                android:background="@drawable/bg_round_r"
                android:layout_marginLeft="1dp"
                android:src="@drawable/ico_pw"
                android:scaleType="fitCenter"
                android:padding="15dp"
                android:duplicateParentState="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_between_component"
            >
            <CheckBox
                android:id="@+id/chk_remember_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login_remember_acc"
                android:textColor="@color/color_main_normal_text"
                android:textSize="@dimen/text_font_3"
                />
            <CheckBox
                android:id="@+id/chk_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/chk_remember_acc"
                android:text="@string/login_auto_login"
                android:textColor="@color/color_main_normal_text"
                android:textSize="@dimen/text_font_3"
                />
            <TextView
                android:id="@+id/btn_find_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/chk_remember_acc"
                android:layout_alignBottom="@id/chk_remember_acc"
                android:gravity="center_vertical"
                android:clickable="true"
                android:text="@string/login_find_acc"
                android:textColor="@color/color_main_normal_text"
                android:textSize="@dimen/text_font_3"
                android:visibility="gone"
                />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="right"
            >
            <ImageView
                android:layout_width="@dimen/login_ico_size"
                android:layout_height="@dimen/login_ico_size"
                android:padding="15dp"
                android:background="@drawable/bg_color_round_r"
                android:src="@drawable/ico_arrow"
                android:scaleType="fitCenter"
                />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/login_btn_size"
                android:layout_height="@dimen/login_ico_size"
                android:background="@drawable/bg_color_round_l"
                android:layout_marginLeft="1dp"
                android:text="login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_font_4"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
