<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/main_layout_size"
        android:layout_height="@dimen/main_layout_size"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="3"
        >
        <!--1st line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            >
            <!--홈-->
            <!--<RelativeLayout-->
                <!--android:id="@+id/btn_home"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_margin="@dimen/main_icon_margin"-->
                <!--android:background="@drawable/color_main_icon_selector"-->
                <!--android:clickable="true"-->
                <!--android:onClick="onClick"-->
                <!--&gt;-->
                <!--<ImageView-->
                    <!--android:layout_width="@dimen/main_icon_size"-->
                    <!--android:layout_height="@dimen/main_icon_size"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:src="@drawable/ico_home_w"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--/>-->
                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_marginBottom="@dimen/main_icon_text_margin"-->
                    <!--android:layout_marginRight="@dimen/main_icon_text_margin"-->
                    <!--android:textColor="@color/color_main_icon_text"-->
                    <!--android:textSize="@dimen/main_icon_text_font"-->
                    <!--android:text="@string/txt_home"-->
                    <!--/>-->
            <!--</RelativeLayout>-->

            <!--재고판매-->
            <RelativeLayout
                android:id="@+id/btn_sale_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_sale_stock_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_sale_stock"
                    />
            </RelativeLayout>

            <!--매입후판매-->
            <RelativeLayout
                android:id="@+id/btn_sale_after_purchase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_sale_after_purchase_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_sale_after_purchase"
                    />
            </RelativeLayout>

            <!--판매조회 및 수정-->
            <RelativeLayout
                android:id="@+id/btn_sale_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_sale_list_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_sale_list"
                    />
            </RelativeLayout>


        </LinearLayout>

        <!--2nd line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            >

            <!--재고조회-->
            <RelativeLayout
                android:id="@+id/btn_stock_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_stock_list_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_stock_list"
                    />
            </RelativeLayout>

            <!--출고증-->
            <RelativeLayout
                android:id="@+id/btn_factory_cert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_factory_cert_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_factory_cert"
                    />
            </RelativeLayout>

            <!--거래처조회-->
            <RelativeLayout
                android:id="@+id/btn_cust_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_cust_list_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_cust_list"
                    />
            </RelativeLayout>

        </LinearLayout>

        <!--3rd line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            >


            <!--공유자료-->
            <RelativeLayout
                android:id="@+id/btn_file_manager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_file_manager_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_file_manager"
                    />
            </RelativeLayout>

            <!--모바일 팩스-->
            <RelativeLayout
                android:id="@+id/btn_mobile_fax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_mobile_fax_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_mobilefax"
                    />
            </RelativeLayout>

            <!--알림-->
            <RelativeLayout
                android:id="@+id/btn_alert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/main_icon_margin"
                android:background="@drawable/color_main_icon_selector"
                android:clickable="true"
                android:onClick="onClick"
                >
                <ImageView
                    android:layout_width="@dimen/main_icon_size"
                    android:layout_height="@dimen/main_icon_size"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_alert_w"
                    android:scaleType="fitCenter"
                    />
                <TextView
                    android:id="@+id/txt_alert_cnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="@dimen/main_icon_text_margin"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/text_font_3"
                    android:textStyle="bold"
                    android:text="(10)"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/main_icon_text_margin"
                    android:layout_marginRight="3dp"
                    android:layout_toLeftOf="@id/txt_alert_cnt"
                    android:textColor="@color/color_main_icon_text"
                    android:textSize="@dimen/main_icon_text_font"
                    android:text="@string/txt_alert"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/color_main_bottom"
        android:paddingTop="@dimen/main_layout_bottom_vertical_padding"
        android:paddingBottom="@dimen/main_layout_bottom_vertical_padding"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_bottom_1"
            android:textSize="@dimen/text_font_1"
            android:textColor="@color/color_main_bottom_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_bottom_2"
            android:textSize="@dimen/text_font_1"
            android:textColor="@color/color_main_bottom_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_bottom_3"
            android:textSize="@dimen/text_font_1"
            android:textColor="@color/color_main_bottom_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_bottom_4"
            android:textSize="@dimen/text_font_1"
            android:textColor="@color/color_main_bottom_text"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_bottom_5"
            android:textSize="@dimen/text_font_1"
            android:textColor="@color/color_main_bottom_text"
            />
    </LinearLayout>
</RelativeLayout>